crates/polylint-core/tests/snapshots/native_tool__gleam_native_known_unformatted.snap
---
source: crates/polylint-core/tests/native_tool.rs
expression: formatted
---
pub fn main() -> Nil {
  io.println("hello")
}
