crates/polylint-core/tests/snapshots/native_tool__go_native_known_unformatted.snap
---
source: crates/polylint-core/tests/native_tool.rs
expression: formatted
---
package main

import "fmt"

func main() {
	fmt.Println("hello")
}
