crates/polylint-core/tests/snapshots/native_tool__java_native_known_unformatted.snap
---
source: crates/polylint-core/tests/native_tool.rs
expression: formatted
---
public class Hello {
  public static void main(String[] args) {
    System.out.println("hello");
  }
}
