crates/polylint-core/tests/snapshots/native_tool__kotlin_native_known_unformatted.snap
---
source: crates/polylint-core/tests/native_tool.rs
expression: formatted
---
fun main() {
    println("hello")
    val x = 1 + 2
}
