crates/polylint-core/tests/snapshots/native_tool__r_native_known_unformatted.snap
---
source: crates/polylint-core/tests/native_tool.rs
expression: formatted
---
x <- 1 + 2
y <- x * 3
print(y)
